Test/dafny4/git-issue49.dfy.expect
git-issue49.dfy(8,14): Error: Raised while checking export set m1: Undeclared top-level type or type parameter: T (did you forget to qualify a name or declare a module import 'opened'?)
git-issue49.dfy(8,19): Error: Raised while checking export set m1: Undeclared top-level type or type parameter: T (did you forget to qualify a name or declare a module import 'opened'?)
git-issue49.dfy(5,1): Error: This export set is not consistent: m1
3 resolution/type errors detected in git-issue49.dfy
